@@ -1,6 +1,7 @@
 2017-08-31 Lonnie Blansett <lonnie@omniverserpg.com>
 Omniverse 1.1.1
 Change #29: Software System - Always display "Unversioned Tickets" section on Road Map (Lonnie Blansett)
+Major Bug #37: Admin - "Search" tabs not working for any module (Lonnie Blansett)
 
 2017-08-31 Lonnie Blansett <lonnie@omniverserpg.com>
 Omniverse 1.1.0
